--- a/styles.less
+++ b/styles.less
@@ -18,24 +18,16 @@ a:hover {
  font-size: 20px;
 }
 .navbar-default, .navbar-text, .dropdown, .dropdown-menu{
-	min-height:100px;
-	height: 100px;
 	background-color: #83EDD9;
 	color: #494949;
 }
 .navbar-collapse { 
 	background: #83EDD9; 
 } 
-
-ul.dropdown-menu{
-  background-color: tomato;
-}
 .fp {
 	font-size: 30px;
 }
-
-.nn>a:hover,
-.nn>a:focus {
+#nav li:hover { background-position: 0 -40px;
   animation-duration: 3s;
   animation-name: slidein;
 }
@@ -52,6 +44,17 @@ ul.dropdown-menu{
   }
 }
 
+-webkit-@keyframes slidein {
+  from {
+    margin-top: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-top: 0%;
+    width: 100%;
+  }
+}
 
 #logo {
     -webkit-animation:spin 2s linear infinite;
@@ -63,6 +66,6 @@ ul.dropdown-menu{
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 #logo:hover {
-    -webkit-animation-play-state: paused
+    -webkit-animation-play-state: paused;
     animation-play-state: paused;
 }
